...
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="Home" />

    <item
        android:id="@+id/ic_search"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item
        android:id="@+id/ic_location"
        android:icon="@drawable/ic_location"
        android:title="Stores" />

...
