<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CartFragment"
    android:id="@+id/layout_fragment_cart">

    <TextView
        android:id="@+id/noItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ops, Your Shopping Cart is Empty!"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/totalPrice"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartRecycler"
        android:layout_width="360dp"
        android:layout_height="330dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/totalPrice"/>

    <TextView
        android:id="@+id/totalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total Price: "
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@id/totalGST"
        app:layout_constraintLeft_toLeftOf="@id/cartRecycler" />

    <TextView
        android:id="@+id/priceSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#008000"
        app:layout_constraintRight_toLeftOf="@id/totalPriceValue"
        app:layout_constraintTop_toTopOf="@id/totalPriceValue" />

    <TextView
        android:id="@+id/totalPriceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="#008000"
        app:layout_constraintTop_toTopOf="@id/totalPrice"
        app:layout_constraintRight_toRightOf="@id/cartRecycler" />

    <TextView
        android:id="@+id/totalGST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GST (inclusive): "
        android:textSize="16dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@id/totalPrice"
        app:layout_constraintLeft_toLeftOf="@id/cartRecycler"
        app:layout_constraintBottom_toTopOf="@id/checkOutBtn"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/priceSymbol2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$"
        android:textSize="18dp"
        android:textColor="#008000"
        app:layout_constraintRight_toLeftOf="@id/totalGSTValue"
        app:layout_constraintTop_toTopOf="@id/totalGSTValue" />

    <TextView
        android:id="@+id/totalGSTValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0.00"
        android:textSize="16dp"
        android:textColor="#008000"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toTopOf="@id/totalGST"
        app:layout_constraintRight_toRightOf="@id/cartRecycler" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintLeft_toLeftOf="@id/totalGST"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/checkOutBtn"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/black"
            android:text="Check Out"/>

        <Button
            android:id="@+id/clearCartBtn"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/black"
            android:text="Clear Cart" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>